--- a/css/style.css
+++ b/css/style.css
@@ -560,11 +560,11 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
-	width: 70%;
+	width: 75%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
-	width: 65%;
+	width: 70%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
@@ -572,11 +572,11 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(5) .bar span {
-	width: 60%;
+	width: 50%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(6) .bar span {
-	width: 60%;
+	width: 75%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(7) .bar span {
@@ -693,7 +693,7 @@ span {
 }
 
 .contact {
-	min-height: auto;
+	min-height: 80vh;
 	padding-bottom: 7rem;
 	background: var(--second-bg-color);
 }
@@ -703,114 +703,56 @@ span {
 	transform: translateX(-50%);
 }
 
-.contact form {
-	position: relative;
-	max-width: 70rem;
-	margin: 0 auto;
-	text-align: center;
-}
+.contact-container {
+	display: grid;
+	grid-template-columns: 1fr 2fr;
 
-form .input-box {
-	position: relative;
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-}
-
-.contact form .input-box .input-field {
-	position: relative;
-	width: 49%;
-	margin: 1.8rem 0;
-}
-
-.contact form .input-box .input-field,
-.contact form .textarea-field {
-	z-index: 1;
-}
-/* 
-.contact form .input-box .input-field input,
-.contact form .textarea-field textarea {
-	width: 100%;
-	height: 100%;
-	padding: 1.5rem;
-	font-size: 1.6rem;
-	color: var(--text-color);
-	background: transparent;
-	border-radius: 0.6rem;
-	border: 0.2rem solid var(--main-color);
-} */
-
-.contact form .input-box .input-field input::placeholder,
-.contact form .textarea-field textarea::placeholder {
-	color: var(--text-color);
-}
-
-.contact form .focus {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 0%;
-	height: 100%;
-	background: var(--bg-color);
-	border-radius: 0.6rem;
-	z-index: -1;
-	transition: 0.5s;
-}
-
-.contact form .input-box .input-field input:focus ~ .focus,
-.contact form .input-box .input-field input:valid ~ .focus,
-.contact form .textarea-field textarea:focus ~ .focus,
-.contact form .textarea-field textarea:valid ~ .focus {
-	width: 100%;
-}
-.contact form .textarea-field {
-	position: relative;
-	margin: 0.8rem 0 2.7rem;
-	/* display: flex; */
-}
-
-.input-box .input-field {
-	width: 48.5%;
-}
-.contact .field .item {
-	width: 100%;
-	padding: 18px;
-	background: transparent;
-	border: 2px solid var(--main-color);
-	border-radius: 6px;
-	font-size: 16px;
-	color: var(--secondary-text-color);
-}
-
-.field .error-txt {
-	font-size: 14.5px;
-	color: var(--error-txt-color);
-	text-align: left;
 	background: var(--second-bg-color);
-	display: none;
 }
 
-.field.error .error-txt {
+.contact-img {
+	flex: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	font-size: 25rem;
+}
+
+.contact-img img {
+	max-width: 100%;
+	border-radius: 50%;
+}
+
+.contact-details {
+	flex: 1;
+	padding: 2rem;
+}
+
+.contact-details h3 {
+	font-size: 4rem;
+	margin-bottom: 2rem;
+}
+
+.contact-details p {
+	font-size: 1.6rem;
+	margin-bottom: 2rem;
+}
+
+.contact-box {
+	display: flex;
+	flex-direction: column;
+}
+
+.contact-box .details a {
 	display: block;
-}
-.field.error .item {
-	border-color: var(--error-txt-color);
-}
-
-form .textfield-field .item {
-	resize: none;
+	font-size: 1.6rem;
+	margin-bottom: 0.5rem;
+	color: var(--text-color);
 }
 
-form .textfield-field .error-txt {
-	margin-top: -10px;
-}
-
-.contact form .textarea-field textarea {
-	resize: none;
-}
-
-.contact form .btn-box.btns .btn {
-	cursor: pointer;
+.contact-box .details a i {
+	margin-right: 0.5rem;
 }
 
 .footer {
@@ -1146,9 +1088,6 @@ section:nth-child(odd) .animate.scroll {
 		padding: 10rem 4% 5rem 5%;
 	}
 
-	.contact form .input-box .input-field {
-		width: 100%;
-	}
 	.footer {
 		flex-direction: column;
 	}
