--- a/css/style.css
+++ b/css/style.css
@@ -693,8 +693,8 @@ span {
 }
 
 .contact {
-	min-height: 80vh;
-	padding-bottom: 7rem;
+	min-height: auto;
+	padding-bottom: 10rem;
 	background: var(--second-bg-color);
 }
 .contact .heading {
