--- a/css/style.css
+++ b/css/style.css
@@ -379,101 +379,10 @@ span {
 	background: var(--second-bg-color);
 }
 
-.education {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	min-height: auto;
-	padding-bottom: 5rem;
-}
-
-.education .education-row {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 5rem;
-}
-
-.education-row .education-column {
-	flex: 1 1 40rem; /*is a shorthand for three properties: flex-grow, flex-shrink, and flex-basis */
-}
-
-.education-column .title {
-	position: relative;
-	display: inline-block;
-	font-size: 2.5rem;
-	margin: 0 0 1.5rem 2rem;
-}
-
-.education-column .education-box {
-	position: relative;
-	border-left: 0.2rem solid var(--main-color);
-}
-
-.education-box .education-content {
-	position: relative;
-	padding-left: 2rem;
-}
-
-.education-box .education-content::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: -1.1rem;
-	width: 2rem;
-	height: 2rem;
-	background: var(--main-color);
-	border-radius: 50%;
-}
-
-.education-content .content {
-	position: relative;
-	padding: 1.5rem;
-	border: 0.2rem solid var(--main-color);
-	border-radius: 0.6rem;
-	margin-bottom: 2rem;
-	overflow: hidden;
-}
-
-.education-content .content::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 0%;
-	height: 100%;
-	background: var(--second-bg-color);
-	z-index: -1;
-	transition: 0.5s;
-}
-
-.education-content .content:hover::before {
-	width: 100%;
-}
-
-.education-content .content .year {
-	font-size: 1.5rem;
-	color: var(--main-color);
-	padding-bottom: 0.5rem;
-}
-
-.education-content .content .year i {
-	padding-right: 0.5rem;
-}
-
-.education-content .content h3 {
-	font-size: 2rem;
-}
-
-.education-content .content p {
-	font-size: 1.5rem;
-	padding-top: 0.5rem;
-}
-
 .skills {
 	min-height: auto;
 	padding-bottom: 7rem;
-	background: var(--second-bg-color);
+	background: var(--bg-color);
 }
 
 .skills h2 {
@@ -560,7 +469,7 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
-	width: 75%;
+	width: 80%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
@@ -568,27 +477,15 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
-	width: 60%;
-}
-
-.skills-column:nth-child(1) .skills-content .progress:nth-child(5) .bar span {
-	width: 70%;
-}
-
-.skills-column:nth-child(1) .skills-content .progress:nth-child(6) .bar span {
-	width: 65%;
-}
-
-.skills-column:nth-child(1) .skills-content .progress:nth-child(7) .bar span {
 	width: 75%;
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span {
-	width: 80%;
+	width: 85%;
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(2) .bar span {
-	width: 75%;
+	width: 80%;
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span {
@@ -596,23 +493,13 @@ span {
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
-	width: 75%;
-}
-.skills-column:nth-child(2) .skills-content .progress:nth-child(5) .bar span {
-	width: 65%;
-}
-.skills-column:nth-child(2) .skills-content .progress:nth-child(6) .bar span {
-	width: 85%;
-}
-
-.skills-column:nth-child(2) .skills-content .progress:nth-child(7) .bar span {
-	width: 70%;
+	width: 80%;
 }
 
 .portfolio {
 	min-height: auto;
 	padding-bottom: 7rem;
-	background: var(--bg-color);
+	background: var(--second-bg-color);
 }
 
 .portfolio .heading {
@@ -695,7 +582,7 @@ span {
 .contact {
 	min-height: auto;
 	padding-bottom: 10rem;
-	background: var(--second-bg-color);
+	background: var(--bg-color);
 }
 .contact .heading {
 	display: inline-block;
@@ -706,7 +593,7 @@ span {
 .contact-container {
 	display: grid;
 	grid-template-columns: 1fr 2fr;
-	background: var(--second-bg-color);
+	background: var(--bg-color);
 }
 
 .contact-img {
@@ -760,7 +647,7 @@ span {
 	align-items: center;
 	flex-wrap: wrap;
 	padding: 2rem 9%;
-	background: var(--bg-color);
+	background: var(--second-bg-color);
 }
 
 .footer-text,
@@ -840,11 +727,7 @@ section:nth-child(odd) .animate.scroll {
 	background: var(--second-bg-color);
 }
 
-.education .education-box .animate.scroll {
-	width: 105%;
-}
 .about.show-animate .animate.scroll,
-.education.show-animate .animate.scroll,
 .skills.show-animate .animate.scroll,
 .portfolio.show-animate .animate.scroll,
 .contact.show-animate .animate.scroll,
@@ -1083,10 +966,6 @@ section:nth-child(odd) .animate.scroll {
 		transform: translate(-80%, 25%);
 	}
 
-	.education {
-		padding: 10rem 4% 5rem 5%;
-	}
-
 	.footer {
 		flex-direction: column;
 	}
@@ -1149,23 +1028,23 @@ section:nth-child(odd) .animate.scroll {
 @keyframes words {
 	0%,
 	20% {
-		content: "Junior Developer";
+		content: "Frontend Developer";
 	}
 	21%,
 	40% {
-		content: "Good Communicator";
+		content: "Web Developer";
 	}
 	41%,
 	60% {
-		content: "Frontend Developer";
+		content: "Wordpress Developer";
 	}
 	61%,
 	80% {
-		content: "Team Player";
+		content: "Frontend Developer";
 	}
 	81%,
 	100% {
-		content: "Problem Solver";
+		content: "Web Developer";
 	}
 }
 
